--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -83,7 +83,7 @@ body{
     text-align: center;
 }
 
-.redes a, .sitios a{
+.redes a, .sitios a, .form-check a{
     padding-bottom: 10px;
     color:black;
     text-decoration: none;
