--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -49,6 +49,7 @@ body{
 .separador{
     background-color: rgb(53, 34, 179); 
     margin: 50px 0 50px 0;
+    height: 25px;
 }
 
 .dropdown-toggle{
@@ -57,6 +58,10 @@ body{
 
 .bg-logo{
     background-color: rgb(246,254,255);
+}
+
+.navbar-custom{
+    background-color:rgb(233, 233, 233);
 }
 
 .navbar-custom2{
