--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -195,7 +195,8 @@ body{
     margin-top: 10%;
 }
 
-@media screen and (min-width: 992px) {
-    /* Reglas de estilo para pantallas con un ancho mínimo de 992px */
-    /* Aquí puedes añadir los estilos que deseas aplicar */
+@media (min-width: 992px) {
+    .listS{
+        justify-content: end!important;
+    }
   }
